more layout fixes, clicks bleeding through, orientationchange resize et al

--- a/multiview JQM 1.1.RC2/multiview.css
+++ b/multiview JQM 1.1.RC2/multiview.css
@@ -52,8 +52,8 @@ div[data-wrapper="true"] 						{ margin: 0px; padding: 0px; width: inherit; /* h
 .blacklist .ui-footer-global						{ position: absolute; width: 100%; bottom: 0; }
 /* NOTE: without the above the global footer always jumps up to the top of the screen, because it's pos:rel, bottom: auto by default. Don't understand why
          or if I overwrote some styles in this CSS. Works now, but not sure everywhere. */
-.blacklist .ui-panel .ui-header					{ position: absolute; width: 100%; }		 
-.blacklist .ui-panel-mid .ui-header				{ margin-left: 0 !important; }
+.ui-panel .ui-header					{ position: absolute; width: 100%; }		 
+.ui-panel-mid .ui-header				{ margin-left: 0 !important; }
  /* NOTE: the last two rules are needed to make sure panels set up right, especially mid panel, which neither left:0 nor right:0 at pos:rel can put in
     the right position, so on blacklist browsers, I'm switching to pos:absolute, which should be ok, because parent page is also pos:absolute, not
 	sure if this works all the way ... also need to add width: 100%, otherwise header just collapses. */
@@ -72,9 +72,11 @@ div[data-wrapper="true"] 						{ margin: 0px; padding: 0px; width: inherit; /* h
 .ui-splitview-hidden { 
 	display:none; 
 }
+/*
 .menuToggle	{ 
 	position: absolute; 
 }
+*/
 
 .dataTables_filter.ui-menu-button-flex .menuToggle {
 	position: static;
